circuit breaker updated
